--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@remix-run/vercel": "^1.11.1",
     "@vercel/node": "^2.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
